# rent_a_wale

./: .dockerignore  .env.example  .gitignore  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py  seed.py
backend/app/billing/: gateway.py  pricing.py
backend/app/core/: config.py  db.py  deps.py  exceptions.py  logging.py  rate_limit.py  redis.py  security.py
backend/app/events/: emitter.py
backend/app/models/: __init__.py  auth.py  base.py  billing.py  credits.py  deployment.py  enums.py  governance.py  user.py
backend/app/providers/: __init__.py  base.py
backend/app/providers/docker/: compose_interpreter.py  naming.py  provider.py
backend/app/repositories/: auth.py  base.py  billing.py  credits.py  deployments.py  governance.py  users.py
backend/app/routers/: admin.py  auth.py  credits.py  deployments.py  health.py  templates.py  users.py
backend/app/schemas/: admin.py  auth.py  common.py  credits.py  deployment.py  user.py
backend/app/services/: audit_service.py  auth_service.py  credit_service.py  deployment_service.py  host_service.py  image_policy.py
backend/app/utils/: slug.py  time.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: conftest.py  test_auth.py  test_billing_lifecycle.py  test_compose_validation.py  test_credits.py  test_deployments.py  test_image_policy.py  test_pricing.py
docker/: backend-entrypoint.sh  backend.Dockerfile  frontend.Dockerfile
docs/: architecture.md  database.md  sequence-diagrams.md
(+73 files in other folders)
