[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rentawhale-backend"
version = "1.0.0"
description = "Rent-a-Whale — container rental platform backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "sqlalchemy>=2.0.30,<3",
    "alembic>=1.13,<2",
    "psycopg[binary]>=3.1,<4",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "python-jose[cryptography]>=3.3,<4",
    "passlib[bcrypt]>=1.7.4,<2",
    "bcrypt==4.0.1",
    "docker>=7.1,<8",
    "redis>=5.0,<6",
    "celery>=5.4,<6",
    "PyYAML>=6.0,<7",
    "python-multipart>=0.0.9",
    "structlog>=24.1,<25",
    "email-validator>=2.1,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    "freezegun>=1.5",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning:passlib.*"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
